--- a/Git/Drawdede-cliente/web/WEB-INF/navbar-Series.xhtml
+++ b/Git/Drawdede-cliente/web/WEB-INF/navbar-Series.xhtml
@@ -21,7 +21,7 @@ and open the template in the editor.
                 <h:inputText p:class="form-control mr-sm-2" p:type="search" p:placeholder="Busca cualquier película" value="#{misSeriesManagedBean.busqueda}" />
                 <h:commandButton class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Search" action="#{misSeriesManagedBean.buscar()}" />
                 <h:commandButton action="#{misSeriesManagedBean.navegarSeies()}" class="btn btn-outline-success" style="margin-left:10px" value="Mis Series"/>
-                <h:commandButton class="btn btn-outline-success" type="button" style="margin-left:10px" value="Mis Entregas"/>
+                <h:commandButton action="#{misEntregasManagedBean.navegarEntregas()}" class="btn btn-outline-success" style="margin-left:10px" value="Mis Entregas"/>
             </h:form>
         </nav>
     </body>
