--- a/Git/Drawdede-cliente/web/misEntregas.xhtml
+++ b/Git/Drawdede-cliente/web/misEntregas.xhtml
@@ -38,6 +38,7 @@ and open the template in the editor.
                     <h1>#{entrega.anotacion}</h1>
                     <h1>#{entrega.fechaEntrega.toString()}</h1>
                     <h1>#{entrega.id}</h1>
+                    <h1>#{misEntregasManagedBean.getSerieconEntrega(entrega)}</h1>
                 </div>
             </div>
         </ui:repeat>
